--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,23 +12,29 @@ a {
 
 html, body {
     width: 100%;
-    height: 100%;
+    height: auto;
+    min-height: 100%;
     overflow-x: hidden;
-    background-color: #000;
+}
+
+.about::-webkit-scrollbar {
+    display: none;
 }
 
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .container {
-    width: 100vw;
-    height: 100%;
-    min-height: 10vh;
+    width: 100%;
+    min-height: 100vh; /* full viewport height, not fixed */
     background-color: #f1efe7;
 }
+
+
 
 nav {
     position: fixed;
@@ -66,6 +72,7 @@ nav a {
 
 .hero h1 {
     width: 100%;
+    overflow: hidden;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -104,12 +111,17 @@ nav a {
 
 .info {
     width: 100%;
-    height: 100%;
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .col {
     flex: 1;
+}
+
+.col img {
+    max-height: 100vh;
 }
 
 .col:nth-child(2) {
@@ -118,6 +130,8 @@ nav a {
     justify-content: center;
     align-items: center;
     padding: 2em;
+    height: 60%;
+    overflow: hidden;
 }
 
 .col p {
